update travel page

--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -343,8 +343,43 @@ const visitedPlaces = [
         lat: 37.4819,
         lng: 126.7793
     },
-    
-    
+    {
+       name: "Vienna", 
+       country: "Austria",
+        lat: 48.2082,
+        lng: 16.3738
+    },
+    {
+        name: "Budapest",
+        country: "Hungary",
+        lat: 47.4979,
+        lng: 19.0402
+    },
+    {
+        name: "Prague",
+        country: "Czech Republic",
+        lat: 50.0755,
+        lng: 14.4378
+    },
+    {
+        name: "Salzburg",
+        country: "Austria",
+        lat: 47.8095,
+        lng: 13.0550
+    },
+    {
+        name: "St. Wolfgang",
+        country: "Austria",
+        lat: 47.7180,
+        lng: 13.4240
+    },
+    {
+        name: "Istanbul",
+        country: "Turkey",
+        lat: 41.0082,
+        lng: 28.9784
+    }
+
 ];
 
 // 生成城市卡片
